# slonana.cpp

./: --silent  .gitignore  .pre-commit-config.yaml  ADVANCED_GOSSIP_FEATURES.md  AGAVE_COMPATIBILITY_AUDIT.md  AGAVE_COMPATIBILITY_TRACKING.md  AGAVE_IMPLEMENTATION_PLAN.md  AGAVE_TECHNICAL_SPECS.md  AGAVE_TEST_FRAMEWORK.md  ASSEMBLY_OPTIMIZATIONS.md  ASYNC_RETRY_SUMMARY.md  BENCHMARKING.md  BPF_RUNTIME_BENCHMARKS.md  BPF_RUNTIME_GUIDE.md  BUG_DISCOVERY_TESTING.md  CHANGELOG.md  CMakeLists.txt  CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_TESTING.md  COMPREHENSIVE_TESTING_GUIDE.md  CONTRIBUTING.md  CORE_VALIDATOR_IMPLEMENTATION_COMPLETE.md  CORE_VALIDATOR_IMPLEMENTATION_PLAN.md  DEVTO_ARTICLE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FAULT_TOLERANCE_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  GOSSIP_IMPLEMENTATION_SUMMARY.md  GOSSIP_PROTOCOL.md  GOSSIP_SELF_REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_REPORT.md  ISSUE_36_IMPLEMENTATION_SUMMARY.md  ISSUE_36_SUMMARY.md  LOCKFREE_OPTIMIZATIONS.md  LOCK_FREE_QUEUE_IMPROVEMENTS.md  MESHCORE_IMPLEMENTATION_STATUS.md  MESHCORE_SECURITY.md  MODULAR_INTERFACES_AUDIT.md  (+83 more)
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: benchmark-comparison.yml  chaos-engineering.yml  ci.yml  dependency-scan.yml  e2e-antifragility.yml  e2e-comprehensive.yml  e2e-expanded.yml  e2e-program-deployment.yml  e2e-testing.yml  release.yml
_codeql_build_dir/: Makefile  slonana_agave_phase1_tests  slonana_bug_fix_tests  slonana_concurrency_stress_test  slonana_fault_tolerance_integration_tests  slonana_fault_tolerance_tests  slonana_key_management_tests  slonana_shutdown_race_test  slonana_timing_race_test  slonana_tower_bft_tests  slonana_turbine_protocol_tests
antifragility-test/chaos-configs/: validator_flood.json
benchmark_data/: sample_transactions.json
benchmark_results/: benchmark_report.txt  svm_metrics.txt
build-comprehensive/: slonana_consensus_timing_tests  slonana_enhanced_consensus_tests  slonana_monitoring_tests  slonana_performance_stress_tests  slonana_proof_of_history_tests  slonana_transaction_processing_tests  slonana_wallet_tests
chocolatey-package/: slonana-validator.nuspec
chocolatey-package/tools/: chocolateyinstall.ps1  (+1 more)
config/: phase2_config.json
docker/: dev-entrypoint.sh  entrypoint.sh  validator.toml
docs/: 3-NODE-CLUSTER-BENCHMARKS.md  API.md  ARCHITECTURE.md  ASYNC_BPF_EXECUTION.md  ASYNC_RETRY_MIGRATION_GUIDE.md  CLUSTER_TESTING.md  CNAME  CODE_STYLE.md  CONSENSUS_TIMING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  E2E_TEST_EXECUTION_PROOF.md  ECONOMIC_OPCODES.md  MAINNET_LAUNCH.md  MESHCORE.md  ML_INFERENCE.md  PERFORMANCE_OPTIMIZATION.md  PROOF_OF_HISTORY.md  SECURE_COMMUNICATION.md  SNAPSHOT_LOADER_ARCHITECTURE.md  SVM_CONSENSUS_THEORY.md  TEST_EXECUTION_REPORT.md  TOKEN_CONFIGURATION.md  TRANSACTION_SIGNING.md  TUTORIAL_ML_INFERENCE.md  USER_MANUAL.md  VALIDATOR_IMPLEMENTATION_PLAN.md  alerting.md  async_design.md  concurrency.md  index.html  key_management.md  logging.md  security.md  snapshot-bootstrap.md  styles.css  svm-consensus-theory.html  whitepaper.html
e2e-test-data/: validator_config.json
examples/: README.md  queue_backpressure_example.cpp
examples/ml_trading_agent/: CMakeLists.txt  README.md  deploy_and_invoke.cpp  ml_trading_agent.cpp  ml_trading_agent_sbpf.c  train_model.py
focused_comparison/: agave_metrics.json  focused_comparison.json  focused_comparison_report.txt  slonana_metrics.json
homebrew-slonana/: README.md
include/: enhanced_validator_identity.h  slonana_validator.h
keys/: validator-identity.json  vote-account.json
packaging/: build-deb.sh  build-packages.sh
phase3_build/: CMakeLists.txt  phase3_multi_master_demo
programs/: 28uVqZTfZqTy9vuPrHYX78M3iDRMZZf.json  2r95owcPUBrEMZAfbjkVvVc3dD3fKzCpRwaJ1pcr2BBt.json  8T4Kd9aikAr7tosmbwJTxZ5Le7zQjX.json  CzjPtW4erfFtK3BsobNHce6foVRBHqMLW6vHB3knXmHr.json  FyK8jR35HXBnNstATxsqBNoPkPfJPzcXg8QLWitq2oD.json  nN7UxpX6NUPsMEahzxST8KfSRJrCAn.json
scripts/: benchmark_agave.sh  benchmark_agave_3node.sh  benchmark_performance.sh  benchmark_slonana.sh  benchmark_slonana_3node.sh  compare_3node_clusters.sh  compare_validators.sh  dependency-update.sh  deploy_testnet.sh  e2e_async_test.sh  e2e_test.sh  e2e_test_simple.sh  e2e_validator_test.sh  enhanced_chaos_demo.py  example_usage.sh  focused_comparison.sh  generate_transaction_signature.sh  resource_utils.py  setup-monitoring.sh  show_benchmark_results.sh  slonana-cli.sh  test-with-snapshot-fallback.sh  test_localnet_cluster.sh
src/: enhanced_validator_identity.cpp  main.cpp  phase3_multi_master_demo.cpp  phase3_multi_master_demo_simple.cpp  slonana_validator.cpp
test_ledger/: snapshot-407449639.tar.zst  snapshot-411054515.tar.zst
test_results/: activity-recipient.json  activity-recipient2.json  activity-sender.json  funding_failure_note.txt  mock-identity.json  snapshot_sources.json  system_end.json  system_start.json
tests/: benchmark_asm_bpf.cpp  benchmark_bpf_runtime.cpp  benchmark_comprehensive.cpp  benchmark_lockfree_bpf.cpp  benchmark_networking.cpp  benchmark_ultra_bpf.cpp  concurrency_stress_test.cpp  test_3node_integration.sh  test_3node_scripts.sh  test_adversarial_syscalls.cpp  test_agave_phase1_tasks.cpp  test_async_bpf_execution.cpp  test_async_retry.cpp  test_banking_integration.cpp  test_benchmarks.cpp  test_benchmarks_simple.cpp  test_bpf_runtime.cpp  test_bpf_runtime_comprehensive.cpp  test_bpf_runtime_enhanced.cpp  test_bpf_runtime_extended.cpp  test_bug_fixes.cpp  test_cluster_connection.cpp  test_common.cpp  test_comprehensive.cpp  test_consensus.cpp  test_consensus_mechanism.cpp  test_consensus_mechanism_comprehensive.cpp  test_consensus_timing.cpp  test_cpi_depth.cpp  test_economic_opcodes.cpp  test_enhanced_consensus.cpp  test_enum_operations.cpp  test_fault_tolerance.cpp  test_fault_tolerance_integration.cpp  test_fee_market.cpp  test_framework.h  test_fuzzing_bpf_runtime.cpp  test_genesis.cpp  test_gossip_integration.cpp  test_gossip_protocol.cpp  (+40 more)
(+231 files in other folders)
